--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -34,7 +34,7 @@ jobs:
     steps:
       - name: pulling git repo
         uses: actions/checkout@v2
-      - name: insta;ll python version 3.9
+      - name: install python version 3.9
         run: actions/setup-python@v2
         with:
           python-version: "3.9"
